# spec-spine

./: .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  Cargo.toml  README.md  install.sh  spec-spine.toml
.derived/codebase-index/: index.json
.derived/codebase-index/by-package/: spec-spine.json
.derived/codebase-index/by-spec/: 005-coupling-gate.json
.derived/spec-registry/: registry.json
.githooks/: enable-merge-driver.sh  merge-derived-index.sh
.github/: dependabot.yml
.github/workflows/: ai-pr-review.yml  ci.yml  deploy-docs.yml  determinism.yml  release.yml
crates/spec-spine-cli/: Cargo.toml  README.md
crates/spec-spine-cli/src/: cmd_compile.rs  (+4 more)
crates/spec-spine-core/: Cargo.toml  README.md
crates/spec-spine-core/src/: canonical_json.rs  compile.rs  hash.rs  index.rs  lib.rs  markdown.rs  query.rs
crates/spec-spine-core/tests/: compile.rs  conformance.rs  query.rs
crates/spec-spine-types/: README.md
docs/: adoption-guide.md  api.md  bindings-plan.md  overlay-contract.md  releasing.md  schema-versioning.md
docs/design/: 00-architecture.md
npm/: package.json
py/: pyproject.toml
py/scripts/: smoke_test.sh
specs/000-spec-spine-bootstrap/: spec.md
specs/001-compile-registry/: spec.md
specs/002-registry-query/: spec.md
specs/005-coupling-gate/: spec.md
specs/012-index-hash-slices/: spec.md
specs/015-establishes-wrapper-na-alias/: spec.md
specs/020-derived-artifact-merge-driver/: spec.md
specs/021-release-supply-chain-artifacts/: spec.md
standards/spec/: contract.md
website/docs/: extending-and-overlays.md  releasing.md
(+17 files in other folders)
