[package]
name = "spec-spine-core"
description = "The spec-spine engine: compile a markdown spec corpus into a deterministic authority registry, and query it. The library FFI bindings will wrap."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

# Dogfood: the compile capability brings this crate into being.
[package.metadata.spec-spine]
spec = "001-compile-registry"

[dependencies]
spec-spine-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
jsonschema = "0.26"
tempfile = "3"

[lints]
workspace = true
